Script/host-namespace.yml
apiVersion: v1
kind: Pod
metatdata:
  name: my-pod

spec:
  hostIPC: true
  hostNetwork: true
  hostPID: true
  containers:
  - name: my-pod
    image: nginx
