Script/loading-apparmor.yml
apiVersion: v1
kind: Pod
metadata:
  name: apparmor-disk-write
  annotation:
    container.apparmor.security.beta.kubernetes.io/my-pod: localhost/deny-write
  
spec:
  containers:
  - name: my-pod
    image: nginx
	command: ['sh', '-c', 'while true; do echo "I write to the disk" > diskwrite.log; sleep 5; done']
