Script/pod-using-secret-environment-variable.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  restartPolicy: Never
  containers:
  - name: pod-using-secret-var
    image: busybox
    command: ['sh', '-c', 'echo "the credential are: $USERNAME:$PASSWORD"']
