Script/secret-in-volume.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: my-busy-pod
    image: busybox
    volumeMounts:
    - name: my-secret-vol
      mountPath: "/etc/credentials"
      readOnly: true

volumes:
  - name: my-secret-vol
    secret:
      secretName: my-secret
