Script/security-context.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod-security-context
spec:
  securityContext:
    runAsUser: 1000
  containers:
  - name: my-pod-security-context
    image: nginx
	securityContext:
	  runAsUser: 2000
