Script/02-Allowing-limited-traffic.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-np
  namespace: test-ns
spec:
  podSelector:
    matchLabels:
      app: nginx
  policytypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: test
      podSelector:
        matchLabels:
          app: client
    ports:
    - protocol: TCP
      port: 80
