Script/Default-Deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: dev-example
spec:
  podSelector: {} 	// {} means all pods
  policyTypes:
  - Ingress
  - Egress
