Script/constraint-example.yml
apiVersion: constraint.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: dep-must-have-contact
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Deployment"]
  parameters:
    labels: ["contact"]
