Script/constraint-template.yml
apiVersion: templates.gatekeeper.sh./v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
        listKind: K8sRequiredLabelsList
        plural: k8srequiredlabels
        singular: k8srequiredlabels
      validation:
        openAPIV3Schema:
          properties:
            labels:
              type: array
              items: string 
  targets: 
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredlables

        violation[{"msg": msg, "detail": {missing_labels}}] {
        provided := {label | input.review.object.metadata.labels[label]}
        required := {label | label := input.parameters.labels[_]}
        missing := required - provided 
        count(missing) > 0
        msg := sprintt("you must provide labels: %v", [missing])
        }
